Update: create header section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <section class="logo-menubar">
+            <h4 class="logo">
+                My Logo
+            </h4>
+            <nav>
+                <img src="./img/Normal Button/Tertiary/Icons/Icon - Menu.svg" class="hamb-icon" alt="menu-bar">
+            </nav>
+        </section>
+    </header>
     
 </body>
 </html>
