--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
             </nav>
         </section>
     </header>
-    
+    <section class="presentation-part">
+        <h1>I'm Ivonne. Glad to see you!</h1>
+        <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+        </p>
+        <section class="socialnetwork-part">
+           <p class="socialtext-part">
+            LET'S CONNECT
+           </p>
+           <img src="./img/social-media-icons.svg" alt="social-network icons">
+        </section>
+    </section> 
 </body>
 </html>
