--- a/index.html
+++ b/index.html
@@ -3,31 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Microverse mobile project</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <section class="logo-menubar">
-            <h4 class="logo">
-                My Logo
-            </h4>
-            <nav>
-                <img src="./img/Normal Button/Tertiary/Icons/Icon - Menu.svg" class="hamb-icon" alt="menu-bar">
-            </nav>
-        </section>
+            <section class="logo-menubar">
+                <h4 class="logo">
+                    <a href="#">
+                            My Logo
+                    </a>
+                </h4>
+                <nav>
+                    <img src="./img/Normal Button/Tertiary/Icons/Icon - Menu.svg" class="hamb-icon" alt="menu-bar">
+                </nav>
+            </section>
     </header>
     <section class="presentation-part">
-        <h1>I'm Ivonne. Glad to see you!</h1>
-        <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-        </p>
-        <section class="socialnetwork-part">
-           <p class="socialtext-part">
-            LET'S CONNECT
-           </p>
-           <img src="./img/social-media-icons.svg" alt="social-network icons">
-        </section>
-    </section> 
+                    <h1>I'm Ivonne. Glad to see you!</h1>
+                    <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+                    <div class="socialnetwork-part">
+                            <p class="socialtext-part">
+                                LET'S CONNECT
+                            </p>
+                            <ul class="socialnetwork-icon">
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-2.svg" alt="twitter logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-1.svg" alt="linkedin logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/icon-medium.svg" alt="medium logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame.svg" alt="github logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/angelist 1.svg" alt="angelist logo"></a></li>
+                            </ul>
+                    </div>
+      </section>
 </body>
 </html>
