--- a/index.html
+++ b/index.html
@@ -36,5 +36,121 @@
                             </ul>
                     </div>
       </section>
+      <section class="works">
+                <div class="card-works">
+                    <figure>
+                        <img src="./img/Snapshoot-Portfolio-1.png" alt="snapshoot-1">
+                    </figure>
+                    <div class="left-block">
+                        <h2 class="primary-text">Tonic</h2>
+                       <div class="list-card-primary">
+                                <ul>
+                                    <li><a href="#" class="canopy">CANOPY</a></li>
+                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
+                                </ul>
+                        </div>
+                        <p class="work-text">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required.
+                        </p>
+                    </div>
+                    <div class="buttons-group">
+                        <ul class="buttons">
+                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                        </ul>
+                    </div>
+                    <div class="normal-button">
+                        <button class="normal-btn"><a href="#">See project</a></button>
+                    </div>
+                </div>
+                <div class="card-works">
+                    <figure>
+                        <img src="./img/Snapshoot-Portfolio-2.png" alt="snapshoot-2">
+                    </figure>
+                    <div class="left-block">
+                        <h2 class="primary-text">Multi-Post<br/> Stories</h2>
+                       <div class="list-card-primary card-br">
+                                <ul>
+                                    <li><a href="#" class="canopy">CANOPY</a></li>
+                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
+                                </ul>
+                        </div>
+                        <p class="work-text">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required.
+                        </p>
+                    </div>
+                    <div class="buttons-group">
+                        <ul class="buttons">
+                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                        </ul>
+                    </div>
+                    <div class="normal-button">
+                        <button class="normal-btn"><a href="#">See project</a></button>
+                    </div>
+                </div>
+                <div class="card-works">
+                    <figure>
+                        <img src="./img/Snapshoot-Portfolio-3.png" alt="snapshoot-3">
+                    </figure>
+                    <div class="left-block">
+                        <h2 class="primary-text">Tonic</h2>
+                       <div class="list-card-primary">
+                                <ul>
+                                    <li><a href="#" class="canopy">CANOPY</a></li>
+                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
+                                </ul>
+                        </div>
+                        <p class="work-text">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required.
+                        </p>
+                    </div>
+                    <div class="buttons-group">
+                        <ul class="buttons">
+                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                        </ul>
+                    </div>
+                    <div class="normal-button">
+                        <button class="normal-btn"><a href="#">See project</a></button>
+                    </div>
+                </div>
+                <div class="card-works">
+                    <figure>
+                        <img src="./img/Snapshoot-Portfolio-4.png" alt="snapshoot-4">
+                    </figure>
+                    <div class="left-block">
+                        <h2 class="primary-text">Multi-Post<br/>Stories</h2>
+                       <div class="list-card-primary card-br">
+                                <ul>
+                                    <li><a href="#" class="canopy">CANOPY</a></li>
+                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
+                                </ul>
+                        </div>
+                        <p class="work-text">
+                            A daily selection of privately personalized reads; no accounts or sign-ups required.
+                        </p>
+                    </div>
+                    <div class="buttons-group">
+                        <ul class="buttons">
+                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                        </ul>
+                    </div>
+                    <div class="normal-button">
+                        <button class="normal-btn"><a href="#">See project</a></button>
+                    </div>
+                </div>
+                
+                
+      </section>
 </body>
 </html>
