Update: modify and correct errors suggested by Linters tool

--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                         </ul>
                     </div>
                     <div class="normal-button">
-                        <button class="normal-btn"><a href="#">See project</a></button>
+                        <button class="normal-btn">
+                            <a href="#">See project</a>
+                        </button>
                     </div>
                 </div>
                 <div class="card-works">
