Update: add title and paragraph to index.html for myself section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="card-works">
+                <div class="card-works last-card">
                     <figure>
                         <img src="./img/Snapshoot-Portfolio-4.png" alt="snapshoot-4">
                     </figure>
@@ -150,9 +150,23 @@
                     <div class="normal-button">
                         <button class="normal-btn"><a href="#">See project</a></button>
                     </div>
-                </div>
-                
-                
+                </div>        
+      </section>
+      <section class="about-myself">
+        <h2>About <br/> Myself</h2>
+                    <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+                    <div class="socialnetwork-part">
+                            <p class="socialtext-part">
+                                LET'S CONNECT
+                            </p>
+                            <ul class="socialnetwork-icon">
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-2.svg" alt="twitter logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-1.svg" alt="linkedin logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/icon-medium.svg" alt="medium logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame.svg" alt="github logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/angelist 1.svg" alt="angelist logo"></a></li>
+                            </ul>
+                    </div>
       </section>
 </body>
 </html>
