--- a/index.html
+++ b/index.html
@@ -153,19 +153,48 @@
                 </div>        
       </section>
       <section class="about-myself">
-        <h2>About <br/> Myself</h2>
+        <h2 class="about-me">About Myself</h2>
                     <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
                     <div class="socialnetwork-part">
-                            <p class="socialtext-part">
+                            <p class="socialtext-part about-me-part">
                                 LET'S CONNECT
                             </p>
-                            <ul class="socialnetwork-icon">
-                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-2.svg" alt="twitter logo"></a></li>
-                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-1.svg" alt="linkedin logo"></a></li>
-                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/icon-medium.svg" alt="medium logo"></a></li>
+                            <ul class="socialnetwork-icon about-me-part">
                                 <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame.svg" alt="github logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-1.svg" alt="linkedin logo"></a></li>
                                 <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/angelist 1.svg" alt="angelist logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/frame-2.svg" alt="twitter logo"></a></li>
+                                <li><a href="#"><img src="./img/icons-social-network/Tertiary/Icons/icon-medium.svg" alt="medium logo"></a></li>
                             </ul>
+                    </div>
+                    <div class="normal-button resume-btn">
+                        <button class="normal-btn"><a href="#">Get my resume</a></button>
+                    </div>
+                    <div class="languages">
+                        <div class="lang-chv">
+                            <div class="title-icon-me-part">
+                                <h4 class="title">Languages</h4>
+                                <img src="./img/icons-social-network/Tertiary/Icons/Icon - Chevron - Down.svg" class="chev-open" alt="chv-open">
+                            </div>    
+                            <ul class="languages-icon">
+                                <li><img src="./img/icons-social-network/Tertiary/Icons/JS.png" alt="JavaScript logo"><a href="#"><p class="lang">JavaScript</p></a></li>
+                                <li><img src="./img/icons-social-network/Tertiary/Icons/HTML.png" alt="HTML logo"><a href="#"><p class="lang">HTML</p></a></li>
+                                <li><img src="./img/icons-social-network/Tertiary/Icons/CSS.png" alt="CSS logo"><a href="#"><p class="lang">CSS</p></a></li>
+                            </ul>
+                        </div>
+
+                       <div class="fram-chv">
+                            <div class="title-icon-me-part">
+                                <h4 class="title">Frameworks</h4>
+                                <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chv-close">
+                            </div>
+                        </div>
+                        <div class="skills-chv">
+                            <div class="title-icon-me-part">
+                                <h4 class="title">Skills</h4>
+                                <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chv-close">
+                            </div>
+                        </div>
                     </div>
       </section>
 </body>
