Update: add new icon to index.html file

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="lang-chv">
                             <div class="title-icon-me-part">
                                 <h4 class="title">Languages</h4>
-                                <img src="./img/icons-social-network/Tertiary/Icons/Icon - Chevron - Down.svg" class="chev-open" alt="chv-open">
+                                <img src="./img/icons-social-network/Tertiary/Icons/chv-open.svg" class="chev-open" alt="chv-open">
                             </div>    
                             <ul class="languages-icon">
                                 <li><img src="./img/icons-social-network/Tertiary/Icons/JS.png" alt="JavaScript logo"><a href="#"><p class="lang">JavaScript</p></a></li>
