Update: modify languages category with ul and li tags inside

--- a/index.html
+++ b/index.html
@@ -170,32 +170,61 @@
                     <div class="normal-button resume-btn">
                         <button class="normal-btn"><a href="#">Get my resume</a></button>
                     </div>
-                    <div class="languages">
-                        <div class="lang-chv">
-                            <div class="title-icon-me-part">
-                                <h4 class="title">Languages</h4>
-                                <img src="./img/icons-social-network/Tertiary/Icons/chv-open.svg" class="chev-open" alt="chv-open">
-                            </div>    
-                            <ul class="languages-icon">
-                                <li><img src="./img/icons-social-network/Tertiary/Icons/JS.png" alt="JavaScript logo"><a href="#"><p class="lang">JavaScript</p></a></li>
-                                <li><img src="./img/icons-social-network/Tertiary/Icons/HTML.png" alt="HTML logo"><a href="#"><p class="lang">HTML</p></a></li>
-                                <li><img src="./img/icons-social-network/Tertiary/Icons/CSS.png" alt="CSS logo"><a href="#"><p class="lang">CSS</p></a></li>
-                            </ul>
-                        </div>
-
-                       <div class="fram-chv">
-                            <div class="title-icon-me-part">
-                                <h4 class="title">Frameworks</h4>
-                                <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chv-close">
-                            </div>
-                        </div>
-                        <div class="skills-chv">
-                            <div class="title-icon-me-part">
-                                <h4 class="title">Skills</h4>
-                                <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chv-close">
-                            </div>
-                        </div>
-                    </div>
+                    
+                      <ul class="language-list">
+                                <li class="title-lang">
+                                  <ul class="lists">
+                                   <li>
+                                        <h3>Languages</h3>
+                                    </li>
+                                    <li>
+                                        <img src="./img/icons-social-network/Tertiary/Icons/chv-open.svg" alt="chevron open">
+                                    </li>     
+                                </ul>  
+                                </li> 
+                                <li class="program-lang">
+                                    <ul class="develop-lang">
+                                        <li>
+                                            <img src="./img/icons-social-network/Tertiary/Icons/JS.png" alt="JavaScript icon">
+                                        JavaScript
+                                        </li>
+                                    <li>
+                                        <img src="./img/icons-social-network/Tertiary/Icons/HTML.png" alt="HTML icon">
+                                        HTML
+                                    </li> 
+                                    <li>
+                                        <img src="./img/icons-social-network/Tertiary/Icons/CSS.png" alt="CSS icon">
+                                        CSS
+                                    </li>   
+                                    </ul>
+                                </li>
+                                <li class="title-lang">
+                                    <ul class="lists">
+                                        <li>
+                                            <h3>Frameworks</h3>
+                                        </li>
+                                        <li>
+                                            <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chevron-close">
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="line-separator">
+                                    <img src="./img/icons-social-network/Tertiary/Icons/separator.png" alt="line-separator">
+                                </li>
+                                <li class="title-lang">
+                                    <ul class="lists">
+                                        <li>
+                                            <h3>Skills</h3>
+                                        </li>
+                                        <li>
+                                            <img src="./img/icons-social-network/Tertiary/Icons/chevron-right.svg" alt="chevron-close">
+                                        </li>
+                                    </ul>
+                                </li> 
+                                <li class="line-separator">
+                                    <img src="./img/icons-social-network/Tertiary/Icons/separator.png" alt="line-separator">
+                                </li>
+                            </ul>                 
       </section>
 </body>
 </html>
