--- a/index.html
+++ b/index.html
@@ -226,5 +226,10 @@
                                 </li>
                             </ul>                 
       </section>
+      <section class="contact-form">
+        <h2 class="contact-me">Contact me</h2>
+        <p class="contact-paragraph">If you have an application you are interested in developing, a feature that you need to built or a project that needs coding. I'd love to help with it!</p>
+       
+      </section>
 </body>
 </html>
