--- a/index.html
+++ b/index.html
@@ -229,7 +229,12 @@
       <section class="contact-form">
         <h2 class="contact-me">Contact me</h2>
         <p class="contact-paragraph">If you have an application you are interested in developing, a feature that you need to built or a project that needs coding. I'd love to help with it!</p>
-       
+        <form action="#" class="form">
+            <input type="text" name="name" id="name" placeholder="name" class="input">
+            <input type="email" name="email" id="email" placeholder="email" class="input">
+            <textarea name="de" id="" cols="30" rows="10" placeholder="Write your message here" class="input"></textarea>
+            <input type="submit" value="Get in touch" class="button">
+        </form>
       </section>
 </body>
 </html>
