Chore: modify changes requested by reviewer

--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
       <section class="contact-form">
         <h2 class="contact-me">Contact me</h2>
         <p class="contact-paragraph">If you have an application you are interested in developing, a feature that you need to built or a project that needs coding. I'd love to help with it!</p>
-        <form action="https://formspree.io/ivonnebenites2015@gmail.com" method="post" class="form">
-            <input type="text" name="name" id="name" placeholder="name" class="input">
-            <input type="email" name="email" id="email" placeholder="email" class="input">
-            <textarea name="description" id="" cols="30" rows="10" placeholder="Write your message here.." class="input-text"></textarea>
+        <form action="https://formspree.io/f/mnqwgezj" method="POST" class="form">
+            <input type="text" name="name" id="name" placeholder="name" maxlength="30" class="input" required>
+            <input type="email" name="email" id="email" placeholder="email" class="input" required>
+            <textarea name="description" id="" cols="30" rows="10" placeholder="Write your message here.." maxlength="500" class="input-text"></textarea>
             <input type="submit" value="Get in touch" class="button-contact-form">
         </form>
       </section>
