Update: add desktop version to project

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
                 </h4>
                 <nav>
                     <img src="./img/Normal Button/Tertiary/Icons/Icon - Menu.svg" class="hamb-icon" alt="menu-bar">
+                    <ul class="nav-items">
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </nav>
             </section>
     </header>
-    <section class="presentation-part">
-                    <h1>I'm Ivonne. Glad to see you!</h1>
+    <section class="presentation-part desktop-version">
+                    <h1>I'm Ivonne.<br/> Glad to see you!</h1>
                     <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
                     <div class="socialnetwork-part">
                             <p class="socialtext-part">
@@ -38,14 +43,15 @@
       </section>
       <section class="works">
                 <div class="card-works">
-                    <figure>
-                        <img src="./img/Snapshoot-Portfolio-1.png" alt="snapshoot-1">
+                    <figure class="desktop-first">
+                        <img src="./img/Snapshoot-Portfolio-1.png" class="mobile-snapshoot-1 desktop-snapshoot-1" alt="snapshoot-1">
+                        <img src="./img/Snapshoot-Portfolio-5.png" class="mobile-snapshoot-5 desktop-snapshoot-5" alt="snapshoot-5">
                     </figure>
                     <div class="left-block">
                         <h2 class="primary-text">Tonic</h2>
                        <div class="list-card-primary">
                                 <ul>
-                                    <li><a href="#" class="canopy">CANOPY</a></li>
+                                    <li><a href="#" class="canopy-card-1">CANOPY</a></li>
                                     <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
                                     <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
                                 </ul>
@@ -53,106 +59,132 @@
                         <p class="work-text">
                             A daily selection of privately personalized reads; no accounts or sign-ups required.
                         </p>
-                    </div>
-                    <div class="buttons-group">
-                        <ul class="buttons">
-                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
-                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
-                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
-                        </ul>
-                    </div>
-                    <div class="normal-button">
-                        <button class="normal-btn"><a href="#">See project</a></button>
-                    </div>
+                        <div class="buttons-group">
+                            <ul class="buttons">
+                                <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                                <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                                <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                            </ul>
+                        </div>
+                        <div class="normal-button">
+                            <button class="normal-btn"><a href="#">See project</a></button>
+                        </div>
+                    </div>            
                 </div>
                 <div class="card-works">
-                    <figure>
-                        <img src="./img/Snapshoot-Portfolio-2.png" alt="snapshoot-2">
-                    </figure>
-                    <div class="left-block">
+                    <figure class="pic-2-desktop">
+                        <img src="./img/Snapshoot-Portfolio-2.png" class="mobile-snapshoot-2 desktop-snapshoot-2-1" alt="snapshoot-2">
+                        <img src="./img/Snapshoot-Portfolio-4.png" class="mobile-snapshoot-4  desktop-snapshoot-4-2" alt="snapshoot-3">
+                      </figure>
+                    <div class="left-block left-block-desktop change">
                         <h2 class="primary-text">Multi-Post<br/> Stories</h2>
                        <div class="list-card-primary card-br">
                                 <ul>
                                     <li><a href="#" class="canopy">CANOPY</a></li>
-                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="facebook facebook-2">FACEBOOK</a></li>
+                                    <li><a href="#" class="back back-mobile"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="back back-desktop back-desktop-2"><img src="./img/Counter.svg">Full Stack Dev</a></li> 
                                     <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
                                 </ul>
                         </div>
-                        <p class="work-text">
+                        <p class="work-text-2">
                             A daily selection of privately personalized reads; no accounts or sign-ups required.
                         </p>
+                        <p class="work-text-desktop work-text-desktop-2">
+                            Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.
+                        </p>
+                        <div class="buttons-group">
+                            <ul class="buttons">
+                                <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                                <li><button class="button-bg btn-ruby"><a href="#">Ruby on rails</a></button></li>
+                                <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                                <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                            </ul>
+                        </div>
+                        <div class="normal-button">
+                            <button class="normal-btn"><a href="#">See project</a></button>
+                        </div>
                     </div>
-                    <div class="buttons-group">
-                        <ul class="buttons">
-                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
-                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
-                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
-                        </ul>
-                    </div>
-                    <div class="normal-button">
-                        <button class="normal-btn"><a href="#">See project</a></button>
-                    </div>
+                   
                 </div>
                 <div class="card-works">
                     <figure>
-                        <img src="./img/Snapshoot-Portfolio-3.png" alt="snapshoot-3">
+                        <img src="./img/Snapshoot-Portfolio-3.png" class="mobile-snapshoot-3 desktop-snapshoot-3" alt="snapshoot-3">
+                        <img src="./img/Snapshoot-Portfolio-1.png" class="mobile-snapshoot-1 desktop-snapshoot-1-3" alt="snapshoot-1">
                     </figure>
                     <div class="left-block">
-                        <h2 class="primary-text">Tonic</h2>
+                        <h2 class="primary-text tonic-desktop">Tonic</h2>
+                        <h2 class="desktop-text">Facebook 360</h2>
                        <div class="list-card-primary">
                                 <ul>
                                     <li><a href="#" class="canopy">CANOPY</a></li>
-                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="facebook-desktop facebook-mobile">FACEBOOK</a></li>
+                                    <li><a href="#" class="back back-backend"><img src="./img/Counter.svg">Back End Dev</a></li>
+                                    <li><a href="#" class="back back-desktop"><img src="./img/Counter.svg">Full Stack Dev</a></li> 
                                     <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
                                 </ul>
                         </div>
-                        <p class="work-text">
+                        <p class="work-text-3">
                             A daily selection of privately personalized reads; no accounts or sign-ups required.
                         </p>
-                    </div>
-                    <div class="buttons-group">
-                        <ul class="buttons">
-                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
-                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
-                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
-                        </ul>
-                    </div>
-                    <div class="normal-button">
-                        <button class="normal-btn">
-                            <a href="#">See project</a>
-                        </button>
-                    </div>
+                        <p class="work-text-desktop">
+                            Exploring the future of media in Facebook's first Virtual Reality app: a place to discover and enjoy 360 photos and videos on Gear VR.
+                        </p>
+                        <div class="buttons-group">
+                            <ul class="buttons">
+                                <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                                <li><button class="button-bg btn-ruby"><a href="#">Ruby on rails</a></button></li>
+                                <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                                <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                            </ul>
+                        </div>
+                        <div class="normal-button">
+                            <button class="normal-btn normal-btn-desktop">
+                                <a href="#">See project</a>
+                            </button>
+                        </div>
+                    </div>    
                 </div>
                 <div class="card-works last-card">
                     <figure>
-                        <img src="./img/Snapshoot-Portfolio-4.png" alt="snapshoot-4">
+                        <img src="./img/Snapshoot-Portfolio-4.png" class="mobile-snapshoot-4 desktop-snapshoot-4 snp-4" alt="snapshoot-4">
+                        <img src="./img/Snapshoot-Portfolio-2.png" class="mobile-snapshoot-2 desktop-snapshoot-2 snp-2" alt="snapshoot-2">
                     </figure>
-                    <div class="left-block">
-                        <h2 class="primary-text">Multi-Post<br/>Stories</h2>
+                    <div class="left-block left-block-desktop change">
+                        <h2 class="primary-text multi-desktop">Multi-Post<br/>Stories</h2>
+                        <h2 class="desktop-text">Uber Navigation</h2>
                        <div class="list-card-primary card-br">
                                 <ul>
-                                    <li><a href="#" class="canopy">CANOPY</a></li>
-                                    <li><a href="#" class="back"><img src="./img/Counter.svg">Back End Dev</a></li>
-                                    <li><a href="#" class="year"><img src="./img/Counter.svg">2015</a></li>
+                                    <li><a href="#" class="canopy">Canopy</a></li>
+                                    <li><a href="#" class="canopy uber">Uber</a></li>
+                                    <li><a href="#" class="back backend-dev"><img src="./img/Counter.svg">Back end Dev</a></li>
+                                    <li><a href="#" class="back back-lead"><img src="./img/Counter.svg">Lead Developer</a></li>
+                                    <li><a href="#" class="year year-before"><img src="./img/Counter.svg">2015</a></li>
+                                    <li><a href="#" class="year-more"><img src="./img/Counter.svg">2018</a></li>
                                 </ul>
                         </div>
-                        <p class="work-text">
+                        <p class="work-text-4">
                             A daily selection of privately personalized reads; no accounts or sign-ups required.
                         </p>
-                    </div>
-                    <div class="buttons-group">
-                        <ul class="buttons">
-                            <li><button class="button-bg"><a href="#">HTML</a></button></li>
-                            <li><button class="button-bg"><a href="#">CSS</a></button></li>
-                            <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
-                        </ul>
-                    </div>
-                    <div class="normal-button">
-                        <button class="normal-btn"><a href="#">See project</a></button>
-                    </div>
+                        <p class="work-text-desktop uber-text">
+                          A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer your car.  
+                        </p>
+                        <div class="buttons-group">
+                            <ul class="buttons">
+                                <li><button class="button-bg"><a href="#">HTML</a></button></li>
+                                <li><button class="button-bg btn-ruby"><a href="#">Ruby on rails</a></button></li>
+                                <li><button class="button-bg"><a href="#">CSS</a></button></li>
+                                <li><button class="button-bg"><a href="#">JavaScript</a></button></li>
+                            </ul>
+                        </div>
+                        <div class="normal-button">
+                            <button class="normal-btn"><a href="#">See project</a></button>
+                        </div>
+                    </div>    
                 </div>        
       </section>
       <section class="about-myself">
+        <div class="about-myself-first">
         <h2 class="about-me">About Myself</h2>
                     <p class="presentation-paragraph">I am a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
                     <div class="socialnetwork-part">
@@ -170,7 +202,7 @@
                     <div class="normal-button resume-btn">
                         <button class="normal-btn"><a href="#">Get my resume</a></button>
                     </div>
-                    
+                   </div> 
                       <ul class="language-list">
                                 <li class="title-lang">
                                   <ul class="lists">
