--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         <form action="https://formspree.io/f/mnqwgezj" method="POST" class="form">
             <input type="text" name="name" id="name" placeholder="name" maxlength="30" class="input" autocomplete="given-name" required>
             <input type="email" name="email" id="email" placeholder="email" class="input" autocomplete="off" required>
-            <textarea name="description" id="" cols="30" rows="10" placeholder="Write your message here.." maxlength="500" class="input-text" required></textarea>
+            <textarea name="description" id="message" cols="30" rows="10" placeholder="Write your message here.." maxlength="500" class="input-text" required></textarea>
+            <p class="alert"></p>
             <input type="submit" value="Get in touch" class="button-contact-form">
         </form>
       </section>
